# brasilapi-client-cpp

./: .gitignore  CMakeLists.txt  README.md  cep_info.json
examples/: usage.cpp
lib/: CMakeLists.txt
lib/include/: ApiProvider.h  Globals.h  HTTPService.h  Utils.h
lib/src/: ApiProvider.cpp  HTTPService.cpp  Utils.cpp
